[package]
name = "mdlp-rs"
version = "0.1.0"
authors = ["Taiga Nakayama"]
edition = "2018"
description = "A utility crate for literate programming in markdown files."
license = "Apache-2.0"
homepage = "https://github.com/dora-gt/mdlp-rs"
repository = "https://github.com/dora-gt/mdlp-rs.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
regex = "1.1.6"
lazy_static = "1.3.0"